styling quick fix for alignment in active call view

--- a/src/app/MainContent.module.css
+++ b/src/app/MainContent.module.css
@@ -22,7 +22,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  max-height: calc(100svh - var(--topbar-height));
+  /* max-height: calc(100svh - var(--topbar-height)); */
 }
 
 .activeViewContainer {
@@ -34,6 +34,7 @@
 
   height: 100%;
   width: var(--content-width);
+  max-width: var(--content-width);
 
   background: var(--bg-darker);
 }
