--- a/src/components/media/VideoStream.module.css
+++ b/src/components/media/VideoStream.module.css
@@ -1,4 +1,6 @@
 .videoStream {
+  position: relative;
+
   width: 100%;
   height: 100%;
 
@@ -19,5 +21,6 @@
     left: var(--gap);
     width: 150px;
     height: 100px;
+    z-index: 1;
   }
 }
